# cg-course

./: CMakeLists.txt  README.md
src/: model.cpp
src/L1/: exe1.cpp  exe2.cpp  exe3.cpp
src/L11/: exe1.cpp
src/L2/: exe1.cpp
src/L3/: exe1.cpp
src/L4/: exe1.cpp  exe2.cpp  extras.h
src/L5/: exe1.cpp
src/L8/: exe1.cpp
src/L9/: exe1.cpp
src/lib/: glctexture.cpp
